<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_set_mood"
            android:icon="@drawable/ic_mood"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_therapist"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/shopFragmentFragment"
            android:icon="@drawable/ic_shop"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_calender"
            android:title="@string/Mood_Calender" />


    </group>
</menu>